# js-wasm-workers-runtime

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  package.json  pnpm-lock.yaml  rome.json
crates/engine/: Cargo.toml  Makefile  pnpm-lock.yaml
crates/engine/src/: fetch.rs  globals.rs  main.rs  request.rs  tests.rs
crates/engine/src/fetch/: fetch.rs  http.rs  mem.rs
crates/engine/src/globals/: console.rs  utils.rs
crates/engine/src/tests/: code.rs  console.rs  core.rs  globals.rs  utils.rs
crates/engine/src/tests/core/: blob.rs  form_data.rs  url-test-data.json  url.rs  url_search_params.rs  url_wpt.rs  urlsearchparams.rs
crates/engine/src/tests/fetch/: api.rs
crates/engine/src/tests/fetch/api/: headers.rs  request.rs  response.rs
crates/engine/src/tests/test_utils/: context.rs
crates/engine/src/tests/utils/: context.rs  shared_stream.rs
crates/engine/src/web-platform-apis/: index.js
crates/engine/src/web-platform-apis/core/: blob.js  form-data.js  handle-response.js  parse-multipart.js  text-decoder.js  text-encoder.js  url-search-params.js  url.js  web-streams.js
crates/engine/src/web-platform-apis/fetch-api/: body.js  fetch.js  headers.js  request-response-methods.js  request-response.js  request.js  response.js  utils.js
crates/run/: Cargo.toml
crates/run/src/: import_send_request.rs  lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: http.rs  import_send_request.rs  lib.rs  wasmtime_environment.rs
docs/decisions/: 0000-document-architecture-decisions.md  0001-choose-a-js-engine.md  template.md
examples/: Cargo.toml  Makefile
examples/env/src/: handler.js  main.rs
examples/fetch-get/src/: handler.js  main.rs
examples/fetch-post-array-buffer/src/: handler.js  main.rs
examples/fetch-post-blob/src/: handler.js
examples/fetch-post-string/src/: handler.js
examples/fetch-post/src/: handler.js  main.rs
examples/fetch/src/: handler.js  main.rs
examples/logger/src/: handler.js  main.rs
examples/request-json/src/: handler.js  main.rs
examples/request-text/src/: handler.js  main.rs
examples/response-json/src/: handler.js  main.rs
examples/response-text/src/: handler.js  main.rs
examples/response/src/: handler.js  main.rs
examples/runtime/src/: handler.js  main.rs
src/: fetch.rs  globals.rs  main.rs  request.rs
src/web-platform-apis/: index.js
src/web-platform-apis/core/: text-decoder.js  url-search-params.js
src/web-platform-apis/fetch-api/: abortcontroller.js  request.js  response.js  utils.js
