[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
wasi-common = "4.0.0"
wasmtime = "4.0.0"
wasmtime-wasi = "4.0.0"

[[example]]
name = "runtime"
path = "runtime/src/main.rs"

[[example]]
name = "logger"
path = "logger/src/main.rs"

[[example]]
name = "request-json"
path = "request-json/src/main.rs"

[[example]]
name = "request-text"
path = "request-text/src/main.rs"