[package]
name = "examples"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
js-wasm-workers-runtime = { path = "../crates/runtime" }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0.85"
wasi-common = "5.0.0"
wasmtime = "5.0.0"
wasmtime-wasi = "5.0.0"

[profile.release]
debug = true

[[example]]
name = "env"
path = "env/src/main.rs"

[[example]]
name = "fetch"
path = "fetch/src/main.rs"

[[example]]
name = "logger"
path = "logger/src/main.rs"

[[example]]
name = "request-json"
path = "request-json/src/main.rs"

[[example]]
name = "request-text"
path = "request-text/src/main.rs"

[[example]]
name = "runtime"
path = "runtime/src/main.rs"