[package]
name = "examples"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
js-wasm-workers-runtime = { path = "../crates/runtime" }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0.85"
tokio = { version = "1.14.0", features = ["full"] }
wasi-common = "5.0.0"
wasmtime = "5.0.0"
wasmtime-wasi = "5.0.0"

[[example]]
name = "env"
path = "env/src/main.rs"

[[example]]
name = "fetch"
path = "fetch/src/main.rs"

[[example]]
name = "logger"
path = "logger/src/main.rs"

[[example]]
name = "request-json"
path = "request-json/src/main.rs"

[[example]]
name = "request-text"
path = "request-text/src/main.rs"

[[example]]
name = "response"
path = "response/src/main.rs"

[[example]]
name = "response-json"
path = "response-json/src/main.rs"

[[example]]
name = "response-text"
path = "response-text/src/main.rs"