[package]
name = "js-wasm-workers-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bytes = { version = "1.3.0", features = ["serde"] }
http = "0.2.8"
once_cell = "1.17.0"
quickjs-wasm-rs = { version = "0.1.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_derive = "1.0"
serde_json = "1.0"
send_wrapper = "0.6.0"
