[package]
name = "js-wasm-workers-runtime"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
serde = "1.0"
serde_bytes = "0.11"
serde_json = "1.0"
wasi-common = "5.0.0"
wasmtime = "5.0.0"
wasmtime-wasi = "5.0.0"
