[package]
name = "js-wasm-workers-runtime"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
lazy_static = "1.4.0"
reqwest = { version = "0.11", features = ["blocking"] }
serde = "1.0"
serde_bytes = "0.11"
serde_json = "1.0"
wasi-common = "7.0.0"
wasmtime = "7.0.0"
wasmtime-wasi = { version = "7.0.0", features = ["tokio"] }